# CFS_backup

./: BasicVersion.py  README.md  bs4_tut.py  new.py  pyproject.toml  selenium_TUT.py
client/: README.md  index.html
client/src/: App.tsx
client/src/components/: AuthForm.tsx  LoginForm.tsx  ProtectedRoute.tsx  SignupForm.tsx  home.tsx
client/src/contexts/: AuthContext.tsx
client/src/pages/: Index.tsx
fastapi-app/: README.md  debug_shivdurgadentalcare.py  inspect_shivdurgadentalcare.py  requirements.txt
fastapi-app/app/: auth.py  contact.py  database.py  main.py  models.py
fastapi-app/app/core/: browser.py  config.py  engine.py  form_filler.py  heuristics.py  navigator.py
fastapi-app/app/templates/: index.html
