[project]
name = "bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.7",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
